--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   rive: null
   shared_preferences: ^2.2.0
   photo_view: ^0.14.0
+  jiffy: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
